correct html overflow disable rightpanel expand on hover

--- a/client/assets/main.scss
+++ b/client/assets/main.scss
@@ -9,6 +9,10 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+html {
+  overflow-y: auto !important;
+}
+
 @media (min-width: 961px) {
   .oddodd:nth-child(4n + 4) {
     background-color: #f2f2f2;
